[package]
name = "yts-api"
version = "0.3.0"
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.65"
description = "Access the yts.mx API"
categories = ["api-bindings"]
repository = "https://github.com/rnestler/yts-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
hyper = { version = "0.14.4", features = ["full"] }
hyper-tls = "0.5.0"
parse-display = "0.8.2"

[dev_dependencies]
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread"] }
